Thu Dec  4 04:20:34 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_require_internal): ignore error detail, just return
	  an error.

Wed Dec  3 17:13:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (load_encoding): use rb_require_internal instead of
	  calling rb_require_safe with protection.

Wed Dec  3 16:47:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (register_init_ext, ruby_init_ext): defer running the
	  registered initialization function until required, not to enable
	  extensions which have global effects just by loading, e.g.,
	  mathn/complex and mathn/rational.  fix `make test` with
	  --with-static-linked-ext.

	* enc/encinit.c.erb (Init_enc): initialize encdb and transdb
	  directly.

Wed Dec  3 14:51:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_require_internal): separate from rb_require_safe,
	  not to raise exceptions.

	* ruby.c (process_options): remove unnatural encoding search.

Wed Dec  3 14:34:07 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (setup_fake_str): fake string does not share another
	  string, but just should not free.

Wed Dec  3 11:14:14 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (w32_spawn): `v2` is used not only for `shell` but also
	  `cmd`, so must not free before using `cmd`.
	  [ruby-core:66648] [Bug #10563]

Wed Dec  3 09:48:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/racc/cparse/cparse.c (cparse_params_type): use typed data.

Tue Dec  2 21:33:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: use typed data for com_hash.

Tue Dec  2 15:30:30 2014  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* array.c (rb_ary_plus): in documentation, added note about
	  inefficiency of repeated += operations.

Tue Dec  2 07:20:21 2014  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_data_to_ary): keep hidden variables
	  Thanks to wanabe [ruby-core:66566]
