@@ -1,3 +1,9 @@
+Thu Dec  4 06:56:57 2014  Eric Wong  <e@80x24.org>
+
+	* iseq.c (iseq_free): avoid segfault on incomplete iseq
+	* test/ruby/test_syntax.rb (test_invalid_next): new test
+	  for syntax error, not segfault
+
 Thu Dec  4 04:20:34 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* load.c (ruby_require_internal): ignore error detail, just return
